Sat May 31 08:31:41 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/minitest/unit.rb: Check Tempfile leaks for each test method
	  again.

Sat May 31 03:50:50 2014  Zachary Scott  <e@zzak.io>

	* lib/delegate.rb: [DOC] Document raise in Delegator class
	  Patch by @lucasmazza. [Fixes GH-621]
	  https://github.com/ruby/ruby/pull/621

Fri May 30 21:23:26 2014  Tanaka Akira  <akr@fsij.org>

	* lib/webrick/server.rb: Use a pipe to detect server shutdown.
	  shutdown() or close() for listening socket is not a reliable.
	  Actually, both doesn't work (doesn't wake up select()) on
	  DragonFly BSD 3.6.2.

	* test/webrick/utils.rb: :ShutdownSocketWithoutClose is not required
	  now to immediate server shutdown detection.
	  This fixes fd leaks.

	* test/net/http/utils.rb: Ditto.

Fri May 30 20:58:37 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/minitest/unit.rb (check_fd_leak): Sort the inspected
	  objects list for a FD.

Fri May 30 18:06:55 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/minitest/unit.rb (check_fd_leak): Try GC to delete leaked
	  FDs.

Fri May 30 12:05:59 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/lib/test/unit/parallel.rb (_run_suite): orig_stdout may be nil
	  though I don't know the reason.

Fri May 30 11:33:35 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_substr): need to reset code range for shared
	  string too, not only copied string.
	  [ruby-core:62842] [Bug #9882]

Fri May 30 10:22:21 2014  Mark Lorenz  <mlorenz@covermymeds.com>

	* lib/erb.rb (result): [DOC] no longer accepts a Proc, as
	  Kernel.eval does not.  [fix GH-619]

Fri May 30 07:25:46 2014  Tanaka Akira  <akr@fsij.org>

	* ext/-test-/dir: Dir#fileno implemented.

	* test/lib/minitest/unit.rb (find_fds): Don't return the fd used to
	  scan /proc/$$/fd.

Fri May 30 04:48:00 2014  Eric Wong  <e@80x24.org>

	* parse.y (rb_gc_mark_parser): remove, empty since r8758
	* internal.h: ditto, not usable from extensions since 2.0.0